# Computor_v1

./: CMakeLists.txt  Makefile  main.cpp  v1.cpp  v1.hpp
header/: v1.hpp
src/: main.cpp  v1.cpp
tests/: CMakeLists.txt  test.cpp  test_computor.cpp  test_find.cpp  test_getters.cpp  test_setters.cpp
